--- a/about.css
+++ b/about.css
@@ -1,24 +1,18 @@
 #header {
-    background-image: url("backgroundLogo1.png");
+    background-image: url("backgroundLogo2.png");
     background-repeat: no-repeat;
     background-position: cover;
     background-size: 100%;
-    padding-bottom: 900px;
+    padding-bottom: 60%;
+    margin-top: 0px;
 }
 
-/*#header img #logo {
+/*img #header #logo {
     width: 100px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 100px;
+    margin-right: 500px;
     padding-top: 10%;
 }*/
-
-img {
-    margin-left: 700px;
-    margin-right: 700px;
-    padding-top: 10px;
-    width: 150px;
-}
 
 body {
    background-color: rgb(255, 255, 255);
@@ -29,10 +23,18 @@ body {
 
 h2, p {
     text-align: center;
+    color: rgb(87, 0, 128);
 }
 
 #founderCeo {
-    border-radius: 50px;
+    padding-top: 0px;
+    padding-left: 45%;
+    padding-right: 45%;
+}
+
+img {
+    border-radius: 5%;
+    width: 10%;
 }
 
 .fa:hover {
@@ -53,7 +55,7 @@ h2, p {
 
   footer {
       text-align: center;
-      padding-top: 50px;
+      padding-top: 30px;
   }
 
   #pages {
