--- a/home.css
+++ b/home.css
@@ -32,10 +32,9 @@ img {
     border-radius: 15px;
     margin-left: auto;
     margin-right: auto;
-    width: 500px;
-    height: 500px;
+    width: 50%;
+    height: 50%;
     display: flex;
-    justify-content: center;
 }
 
 .fa:hover {
