--- a/services.css
+++ b/services.css
@@ -16,6 +16,7 @@
 
 body {
    background-color: rgb(255, 255, 255);
+   min-width: 400px;
    /*background-image: url("backgroundLogo.png");
    background-size: cover;
    background-position: 0px;*/
@@ -42,10 +43,9 @@ img {
     margin-right: auto;
     margin-top: 20px;
     border-radius: 10px;
-    width: 700px;
-    height: 800px;
+    width: 50%;
+    height: 50%;
     display: flex;
-    justify-content: center;
 }
 
 .fa:hover {
