--- a/contacts.css
+++ b/contacts.css
@@ -1,3 +1,8 @@
+body {
+    background-color: rgb(255, 255, 255);
+    min-width: 400px;
+ }
+
 #header {
     background-image: url("images/backgroundLogo2.png");
     background-repeat: no-repeat;
@@ -7,25 +12,11 @@
     margin-top: 0px;
 }
 
-/*img #header #logo {
-    width: 100px;
-    margin-left: 100px;
-    margin-right: 500px;
-    padding-top: 10%;
-}*/
-
-body {
-   background-color: rgb(255, 255, 255);
-   min-width: 400px;
-   /*background-image: url("backgroundLogo.png");
-   background-size: cover;
-   background-position: 0px;*/
-}
-
 #pages {
     text-align: center;
     font-size: 18px;
     font-family: 'Joan', serif;
+    color: rgb(87, 0, 128);
 }
 
 #navigation:hover {
@@ -42,17 +33,23 @@ h2, p {
     font-family: 'Joan', serif;
 }
 
+iframe {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
 p {
     font-size: 18px;
 }
 
 img {
+    border-radius: 500px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
-    border-radius: 10px;
-    width: 50%;
-    height: 50%;
+    width: 25%;
+    height: 30%;
     display: flex;
 }
 
@@ -72,6 +69,7 @@ img {
       text-align: center;
       padding-top: 30px;
   }
+
 
 
 
