--- a/staff.css
+++ b/staff.css
@@ -27,10 +27,53 @@ body {
     color: blue;
 }
 
+#dimple-profile-pic {
+    margin-top: 20px;
+    margin-right: 50px;
+    margin-left: 20px;
+    width: 200px;
+    height: 300px;
+}
+
+#niz-profile-pic {
+    margin-top: 20px;
+    width: 300px;
+    height: 300px;
+    margin-right: 50px;
+    margin-left: 20px;
+}
+
+.dimple, .uniz {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    padding: 15px 10px;
+    border: 2px solid #fff;
+    color: rgb(87, 0, 128);
+    font-family: 'Joan', serif;
+    width: 720px;
+    height: 350px;
+    display: flex;
+    justify-content: space-around;
+    background-color: #fff;
+    border-radius: 20px;
+}
+
+.dimplea, .uniza {
+    padding: 15px 10px;
+}
+
 h2, p {
     text-align: center;
     color: rgb(87, 0, 128);
     font-family: 'Joan', serif;
+}
+
+iframe {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 
 p {
@@ -38,11 +81,11 @@ p {
 }
 
 img {
-    border-radius: 15px;
+    border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-    height: 50%;
+    width: 15%;
+    height: 15%;
     display: flex;
 }
 
