--- a/services.css
+++ b/services.css
@@ -23,11 +23,14 @@ body {
 }
 
 .sticky {
-    text-align: center;
-    font-size: 18px;
-    font-family: 'Joan', serif;
     position: fixed;
     top: 0;
+}
+
+#navigation {
+     text-align: center;
+    font-size: 18px;
+    font-family: 'Joan', serif;
 }
 
 #navigation:hover {
